--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.imotor.manual">
-
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.imotor.manual.ManualActivity">
             <intent-filter>
