--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,10 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,6 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+    </application>X
 
 </manifest>
