--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ android {
     buildToolsVersion '28.0.0'
 
     defaultConfig {
-        applicationId "com.siger.btphone"
+        applicationId "com.siger.helpmanual"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
